--- a/Lenet5.ipynb
+++ b/Lenet5.ipynb
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 102,
    "outputs": [
     {
      "name": "stdout",
@@ -434,8 +434,8 @@
       "  (fc2): Linear(in_features=84, out_features=10, bias=True)\n",
       "  (softmax): Softmax(dim=1)\n",
       ")\n",
-      "tensor([[ 0.0308,  0.0071, -0.0313,  0.1071,  0.0190,  0.0591,  0.0934, -0.0855,\n",
-      "         -0.0209, -0.1070]], grad_fn=<AddmmBackward0>)\n"
+      "tensor([[-0.1383,  0.0730, -0.0295, -0.0246,  0.0458, -0.0857,  0.0406,  0.0671,\n",
+      "          0.0017,  0.1071]], grad_fn=<AddmmBackward0>)\n"
      ]
     }
    ],
@@ -449,8 +449,64 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-06-04T12:37:13.523088Z",
-     "end_time": "2024-06-04T12:37:13.636994Z"
+     "start_time": "2024-06-04T14:19:23.619256Z",
+     "end_time": "2024-06-04T14:19:23.850651Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## visualizing the model"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "outputs": [],
+   "source": [
+    "tb_writer = SummaryWriter('runs/lenet5')\n",
+    "\n",
+    "# visualize the model in our tensorboard summary\n",
+    "tb_writer.add_graph(model, fashion_mnist_train[0][0].unsqueeze(0))\n",
+    "tb_writer.flush()\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2024-06-04T14:06:27.855705Z",
+     "end_time": "2024-06-04T14:06:30.062381Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'torchsummary'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[106], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mtorchsummary\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m summary\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mtorchviz\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m make_dot\n",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'torchsummary'"
+     ]
+    }
+   ],
+   "source": [
+    "from torchviz import make_dot"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2024-06-04T14:26:22.626939Z",
+     "end_time": "2024-06-04T14:26:23.280671Z"
     }
    }
   },
@@ -472,12 +528,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 113,
    "outputs": [],
    "source": [
     "# hyperparameters\n",
     "batch_size = 256\n",
-    "learning_rate = 0.01\n",
+    "learning_rate = 0.001\n",
     "epochs = 100\n",
     "dropout = 0.2\n",
     "weight_decay = 0.0001\n",
@@ -494,9 +550,18 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-06-04T12:37:15.135174Z",
-     "end_time": "2024-06-04T12:37:15.171870Z"
+     "start_time": "2024-06-04T15:13:28.779083Z",
+     "end_time": "2024-06-04T15:13:28.814128Z"
     }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -510,10 +575,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 114,
    "outputs": [],
    "source": [
-    "tb_writer = SummaryWriter('runs/lenet5/new')\n",
+    "tb_writer = SummaryWriter('runs/lenet_2/new')\n",
     "tb_writer.flush()\n",
     "def train(model, train_loader, criterion, optimizer, epochs):\n",
     "    model.train()\n",
@@ -570,8 +635,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-06-04T12:37:16.174943Z",
-     "end_time": "2024-06-04T12:37:16.199100Z"
+     "start_time": "2024-06-04T15:13:32.386413Z",
+     "end_time": "2024-06-04T15:13:32.419974Z"
     }
    }
   },
@@ -591,47 +656,32 @@
      "output_type": "stream",
      "text": [
       "at epoch 0: \n",
-      "validation loss: 0.552721861829149 \n",
-      "training loss:   0.5863098761439324 \n",
+      "validation loss: 0.6022166118976918 \n",
+      "training loss:   0.6620913869142533 \n",
       "at epoch 1: \n",
-      "validation loss: 0.5169323470998317 \n",
-      "training loss:   0.5140097486972809 \n",
+      "validation loss: 0.524002043744351 \n",
+      "training loss:   0.550423635840416 \n",
       "at epoch 2: \n",
-      "validation loss: 0.4799554705619812 \n",
-      "training loss:   0.48677280396223066 \n",
+      "validation loss: 0.4781481088475978 \n",
+      "training loss:   0.49832353919744493 \n",
       "at epoch 3: \n",
-      "validation loss: 0.41543879572381365 \n",
-      "training loss:   0.45105384081602096 \n",
+      "validation loss: 0.4492552605081112 \n",
+      "training loss:   0.46217376202344895 \n",
       "at epoch 4: \n",
-      "validation loss: 0.4330091284944656 \n",
-      "training loss:   0.43389103323221206 \n",
+      "validation loss: 0.42762313180781425 \n",
+      "training loss:   0.44351231276988984 \n",
       "at epoch 5: \n",
-      "validation loss: 0.4331066517119712 \n",
-      "training loss:   0.4314282339811325 \n",
+      "validation loss: 0.40937068424326306 \n",
+      "training loss:   0.4245464396476746 \n",
       "at epoch 6: \n",
-      "validation loss: 0.39470592699152357 \n",
-      "training loss:   0.41928998976945875 \n",
+      "validation loss: 0.3863834903595295 \n",
+      "training loss:   0.40175530552864075 \n",
       "at epoch 7: \n",
-      "validation loss: 0.37378490028229167 \n",
-      "training loss:   0.3932511800527573 \n",
+      "validation loss: 0.37946362330558453 \n",
+      "training loss:   0.398845993578434 \n",
       "at epoch 8: \n",
-      "validation loss: 0.36948368764938194 \n",
-      "training loss:   0.38728514790534974 \n",
-      "at epoch 9: \n",
-      "validation loss: 0.37011298905027673 \n",
-      "training loss:   0.37381681352853774 \n",
-      "at epoch 10: \n",
-      "validation loss: 0.3450904456858939 \n",
-      "training loss:   0.3677587473392487 \n",
-      "at epoch 11: \n",
-      "validation loss: 0.3300458475630334 \n",
-      "training loss:   0.3519861890375614 \n",
-      "at epoch 12: \n",
-      "validation loss: 0.3289822828896502 \n",
-      "training loss:   0.3494691354036331 \n",
-      "at epoch 13: \n",
-      "validation loss: 0.32822890351427364 \n",
-      "training loss:   0.34085379481315614 \n"
+      "validation loss: 0.3903912142236182 \n",
+      "training loss:   0.38433417707681655 \n"
      ]
     }
    ],
@@ -655,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 117,
    "outputs": [
     {
      "data": {
@@ -683,8 +733,35 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-06-04T13:21:12.887407Z",
-     "end_time": "2024-06-04T13:21:13.683138Z"
+     "start_time": "2024-06-04T16:33:57.943426Z",
+     "end_time": "2024-06-04T16:33:59.054843Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Hyperparameters\n",
+    "Let's investigate the results for different hyperparameters choices!\n",
+    "tensorboard allows us to compare the results of different hyperparameters choices. We can compare the results of different hyperparameters choices using the tensorboard web interface. We can compare the training and validation loss for different hyperparameters choices using the tensorboard web interface."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "outputs": [],
+   "source": [
+    "# hyperparameters\n",
+    "dropout = [0.2, 0.3, 0.5]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2024-06-04T16:33:45.001452Z",
+     "end_time": "2024-06-04T16:33:45.022840Z"
     }
    }
   },
