accuracy measurment added🔥🔥

--- a/Lenet5.ipynb
+++ b/Lenet5.ipynb
@@ -369,6 +369,7 @@
     "            nn.Conv2d(6, 16, kernel_size=5, stride=1),\n",
     "            nn.Tanh(),\n",
     "            nn.AvgPool2d(kernel_size=2, stride=2)\n",
+    "            # TODO: add batch normalization,add dropout layer\n",
     "        )\n",
     "        self.conv3 = nn.Conv2d(16, 120, kernel_size=5, stride=1)\n",
     "\n",
@@ -605,7 +606,7 @@
    "execution_count": 124,
    "outputs": [],
    "source": [
-    "tb_writer = SummaryWriter('runs/lenet_2/newtst')\n",
+    "tb_writer = SummaryWriter('runs/lenet_2/with_dropout')\n",
     "tb_writer.flush()\n",
     "def train(model, train_loader, criterion, optimizer, epochs):\n",
     "    model.train()\n",
