--- a/Lenet.ipynb
+++ b/Lenet.ipynb
@@ -31,6 +31,7 @@
    ],
    "source": [
     "#1\n",
+    "\n",
     "! pip install tensorboard"
    ]
   },
@@ -64,7 +65,8 @@
     "from torch.utils.data import DataLoader\n",
     "from torchvision import datasets, transforms\n",
     "import matplotlib.pyplot as plt\n",
-    "from torch.utils.tensorboard import SummaryWriter"
+    "from torch.utils.tensorboard import SummaryWriter\n",
+    "import os"
    ],
    "metadata": {
     "collapsed": false,
